# cocdan

./: .gitignore  Capstanfile  Dockerfile  LICENSE  Procfile  README.md  Readme.md  dev-config.edn  package.json  project.clj  shadow-cljs.edn  test-ws.sh
.clj-kondo/: config.edn
coc-dan-backend/: .gitignore  Cargo.toml  Readme.md  justfile
coc-dan-backend/migration/: Cargo.toml
coc-dan-backend/migration/src/: lib.rs  m20231209_000001_create_user_table.rs  m20231209_000002_create_session.rs  m20231209_000003_create_stage.rs  m20231210_000004_create_relation_stage_user.rs  m20231210_000005_create_avatar.rs  m20231210_000006_create_transaction.rs
coc-dan-backend/resource/: occupation.json  skills.json  weapons.json
coc-dan-backend/src/: err.rs  main.rs  state.rs
coc-dan-backend/src/def/: avatar.rs  dice.rs  map.rs  mod.rs  skills.rs  transaction.rs  weapon.rs
coc-dan-backend/src/def/dice/: def.rs  mod.rs  parser.lalrpop  parser.rs
coc-dan-backend/src/entities/: avatar.rs  link_stage_user.rs  mod.rs  prelude.rs  session.rs  stage.rs  transaction.rs  user.rs
coc-dan-backend/src/service/: db_relation.rs  mod.rs
coc-dan-backend/src/service/avatar/: avatar.http  crud.rs  mod.rs  test.rs
coc-dan-backend/src/service/stage/: crud.rs  mod.rs  stage.http  test.rs
coc-dan-backend/src/service/transaction/: crud.rs  mod.rs  realtime_tx.rs  state_machine.rs  transaction.http
coc-dan-backend/src/service/user/: login.rs  logout.rs  mod.rs  register.rs  user.http
coc-dan-common/: .gitignore  Cargo.toml  justfile
coc-dan-common/src/: err.rs  lib.rs
coc-dan-common/src/def/: avatar.rs  common.rs  mod.rs  skills.rs  state.rs  weapon.rs
coc-dan-common/src/def/avatar/: mod.rs  service.rs
coc-dan-common/src/def/dice/: mod.rs  parser.lalrpop
coc-dan-common/src/def/stage/: mod.rs  service.rs
coc-dan-common/src/def/transaction/: mod.rs  service.rs
coc-dan-common/src/def/user/: mod.rs  service.rs
coc-dan-frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
coc-dan-frontend/src/: core.ts  index.tsx
coc-dan-frontend/src/assets/: app.css
coc-dan-frontend/src/bindings/: IArea.ts  IAvatar.ts  ICreateStage.ts  ICustomEquipment.ts  IDice.ts  IEquipment.ts  IEquipmentItem.ts  IEraEnum.ts  IGameMap.ts  ILeft.ts  IStage.ts  IUser.ts  IUserLogin.ts
coc-dan-frontend/src/components/: InlineInput.tsx  Sidebar.tsx
coc-dan-frontend/src/core/: i18n.tsx  user.ts  utils.ts
coc-dan-frontend/src/pages/: Avatar.tsx  Home.tsx  Index.tsx  Login.tsx
env/dev/clj/: user.clj
env/dev/resources/: logback.xml
env/prod/resources/: logback.xml
env/test/resources/: logback.xml
resources/docs/: docs.md
resources/docs/coc/: fears.csv  occupations.csv  skills.csv  weapons.csv
resources/html/: base.html  home.html
resources/migrations/: 20220121225244-add-users-table.down.sql  20220121225244-add-users-table.up.sql  20220122-add-basic-table.down.sql  20220122-add-basic-table.up.sql  20220218-add-log.down.sql  20220218-add-log.up.sql  20220926150801-add-basic-table.down.sql  20220926150801-add-basic-table.up.sql
resources/public/css/: components.css  console.css  page-stage.css  screen.css  site.css
resources/sql/: queries.sql
src/clj/cocdan/: auxiliary.clj  config.clj  core.clj  handler.clj  hooks.clj  layout.clj  middleware.clj  nrepl.clj  schema.clj
src/cljc/cocdan/: aux.cljc  validation.cljc
src/cljs/cocdan/: ajax.cljs  auxiliary.cljs  core.cljs  db.cljs  event.cljs  events.cljs  system_init.cljs
test/clj/cocdan/: handler_test.clj
(+263 files in other folders)
