[package]
name = "coc-dan-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "*", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros" ]}
tokio = { version = "*", features = ["full"] }
futures = "*"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.193"
serde_json = "1.0.108"
axum = { version = "0.7.2", features = ["json"] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
lazy_static = "1.4.0"
http = "1.0.0"
uuid = { version = "1.6.1", features = ["v4"] }
dotenv = "0.15.0"

[dev-dependencies]
migration = { path = "./migration" }
axum-test = "14.0.0"
[dev-dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "sqlx-sqlite"
]
