[package]
name = "coc-dan-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.84" }
serde-wasm-bindgen = { version = "0.6.0" }
js-sys = { version = "0.3.64" }
serde = "1.0.193"
http = "1.0.0"
ts-rs = "7.0.0"
lazy_static = "1.4.0"
serde_json = "*"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"]}
regex = { version="1.3", default-features = false, features = ["perf", "std", "unicode"] }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
lalrpop = "0.20.0"
